--- a/index.html
+++ b/index.html
@@ -480,17 +480,11 @@
             </button>
 
             <button class="action-btn">
-                <ion-icon name="menu-outline"></ion-icon>
-            </button>
-
-            <button class="action-btn">
                 <ion-icon name="grid-outline"></ion-icon>
-
-                <span class="count">0</span>
             </button>
         </div>
 
-        <nav class="mobile-navigation-menu has-scrollbar" data-mobile-menu>
+        <nav class="mobile-navigation-menu has-scrollbar active" data-mobile-menu>
 
             <div class="menu-top">
                 <h2 class="menu-title">Menu</h2>
@@ -508,7 +502,7 @@
                 </li>
 
                 <li class="menu-category">
-                    <button class="accordionn-menu" data-accordion-btn>
+                    <button class="accordion-menu" data-accordion-btn>
                         <p class="menu-title">Men's</p>
 
                         <div>
@@ -538,7 +532,7 @@
                 </li>
 
                 <li class="menu-category">
-                    <button class="accordionn-menu" data-accordion-btn>
+                    <button class="accordion-menu" data-accordion-btn>
                         <p class="menu-title">Women's</p>
 
                         <div>
@@ -568,7 +562,7 @@
                 </li>
 
                 <li class="menu-category">
-                    <button class="accordionn-menu" data-accordion-btn>
+                    <button class="accordion-menu" data-accordion-btn>
                         <p class="menu-title">Jewelry</p>
 
                         <div>
@@ -599,7 +593,7 @@
 
 
                 <li class="menu-category">
-                    <button class="accordionn-menu" data-accordion-btn>
+                    <button class="accordion-menu" data-accordion-btn>
                         <p class="menu-title">Perfume</p>
 
                         <div>
