--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                             <ion-icon name="caret-back-outline" class="caret-back"></ion-icon>
                         </button>
 
-                        <ul class="submenu-category-list" data-accordion>
+                        <ul class="submenu-category-list active" data-accordion>
                             <li class="submenu-category">
                                 <a href="#" class="submenu-title">English</a>
                             </li>
