Header & Nav Finish

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
             <div class="menu-top">
                 <h2 class="menu-title">Menu</h2>
 
-                <button class="menu-close-btn" dat-mobile-close-btn>
+                <button class="menu-close-btn" data-mobile-close-btn>
                     <ion-icon name="close-outline"></ion-icon>
                 </button>
             </div>
@@ -643,7 +643,7 @@
                             <ion-icon name="caret-back-outline" class="caret-back"></ion-icon>
                         </button>
 
-                        <ul class="submenu-category-list active" data-accordion>
+                        <ul class="submenu-category-list" data-accordion>
                             <li class="submenu-category">
                                 <a href="#" class="submenu-title">English</a>
                             </li>
