--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             </button>
         </div>
 
-        <nav class="mobile-navigation-menu has-scrollbar active" data-mobile-menu>
+        <nav class="mobile-navigation-menu has-scrollbar" data-mobile-menu>
 
             <div class="menu-top">
                 <h2 class="menu-title">Menu</h2>
@@ -706,6 +706,63 @@
             </div>
         </nav>
     </header>
+    <!--================ Main ===============-->
+    <main>
+        <!--========== Baner ==========-->
+        <div class="banner">
+            <div class="container">
+                <div class="slider-container has-scrollbar">
+                    <div class="slider-item">
+                        <img src="assets/images/banner-1.jpg" class="banner-img">
+
+                        <div class="banner-content">
+                            <p class="banner-subtitle">Trending Item</p>
+
+                            <h2 class="banner-title">Women's latest fashion sale</h2>
+
+                            <p class="banner-text">
+                                starting at $ <b>20</b>.00
+                            </p>
+
+                            <a href="#" class="banner-btn">Shop now</a>
+                        </div>
+                    </div>
+
+                    <div class="slider-item">
+                        <img src="assets/images/banner-2.jpg" class="banner-img">
+
+                        <div class="banner-content">
+                            <p class="banner-subtitle">Trending Accessories</p>
+
+                            <h2 class="banner-title">Modern Sunglasses</h2>
+
+                            <p class="banner-text">
+                                starting at $ <b>15</b>.00
+                            </p>
+
+                            <a href="#" class="banner-btn">Shop now</a>
+                        </div>
+                    </div>
+
+                    <div class="slider-item">
+                        <img src="assets/images/banner-3.jpg" class="banner-img">
+
+                        <div class="banner-content">
+                            <p class="banner-subtitle">Sale Offer</p>
+
+                            <h2 class="banner-title">New fashion summer sale</h2>
+
+                            <p class="banner-text">
+                                starting at $ <b>29</b>.99
+                            </p>
+
+                            <a href="#" class="banner-btn">Shop now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
 <!-- JS Link -->
@@ -714,5 +771,5 @@
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-</body>
+</body> 
 </html>
