--- a/index.html
+++ b/index.html
@@ -762,6 +762,142 @@
                 </div>
             </div>
         </div>
+        <!--========== Category ==========-->
+        <div class="category">
+            <div class="container">
+                <div class="category-item-container has-scrollbar">
+
+                    <div class="category-item">
+                        <div class="category-img-box">
+                            <img src="assets/images/icons/dress.svg" width="30">
+                        </div>
+
+                        <div class="category-content-box">
+                            <div class="category-content-flex">
+                                <h3 class="category-item-title">DRESS & FROCK</h3>
+
+                                <p class="category-item-amount">(53)</p>
+                            </div>
+                            <a href="#" class="category-btn">Show all</a>
+
+                        </div>
+                    </div>
+
+                    <div class="category-item">
+                        <div class="category-img-box">
+                            <img src="assets/images/icons/coat.svg" width="30">
+                        </div>
+
+                        <div class="category-content-box">
+                            <div class="category-content-flex">
+                                <h3 class="category-item-title">WINTER WEAR</h3>
+
+                                <p class="category-item-amount">(58)</p>
+                            </div>
+                            <a href="#" class="category-btn">Show all</a>
+
+                        </div>
+                    </div>
+
+                    <div class="category-item">
+                        <div class="category-img-box">
+                            <img src="assets/images/icons/glasses.svg" width="30">
+                        </div>
+
+                        <div class="category-content-box">
+                            <div class="category-content-flex">
+                                <h3 class="category-item-title">GLASSES & LENS</h3>
+
+                                <p class="category-item-amount">(68)</p>
+
+                            </div>
+                            <a href="#" class="category-btn">Show all</a>
+
+                        </div>
+                    </div>
+
+                    <div class="category-item">
+                        <div class="category-img-box">
+                            <img src="assets/images/icons/shorts.svg" width="30">
+                        </div>
+
+                        <div class="category-content-box">
+                            <div class="category-content-flex">
+                                <h3 class="category-item-title">SHORTS & JEANS</h3>
+
+                                <p class="category-item-amount">(84)</p>
+                            </div>
+                            <a href="#" class="category-btn">Show all</a>
+
+                        </div>
+                    </div>
+
+                    <div class="category-item">
+                        <div class="category-img-box">
+                            <img src="assets/images/icons/tee.svg" width="30">
+                        </div>
+
+                        <div class="category-content-box">
+                            <div class="category-content-flex">
+                                <h3 class="category-item-title">T-SHIRTS</h3>
+
+                                <p class="category-item-amount">(35)</p>
+                            </div>
+                            <a href="#" class="category-btn">Show all</a>
+
+                        </div>
+                    </div>
+
+                    <div class="category-item">
+                        <div class="category-img-box">
+                            <img src="assets/images/icons/jacket.svg" width="30">
+                        </div>
+
+                        <div class="category-content-box">
+                            <div class="category-content-flex">
+                                <h3 class="category-item-title">JACKET</h3>
+
+                                <p class="category-item-amount">(16)</p>
+                            </div>
+                            <a href="#" class="category-btn">Show all</a>
+
+                        </div>
+                    </div>
+
+                    <div class="category-item">
+                        <div class="category-img-box">
+                            <img src="assets/images/icons/watch.svg" width="30">
+                        </div>
+
+                        <div class="category-content-box">
+                            <div class="category-content-flex">
+                                <h3 class="category-item-title">WATCH</h3>
+
+                                <p class="category-item-amount">(27)</p>
+                            </div>
+                            <a href="#" class="category-btn">Show all</a>
+
+                        </div>
+                    </div>
+
+                    <div class="category-item">
+                        <div class="category-img-box">
+                            <img src="assets/images/icons/hat.svg" width="30">
+                        </div>
+
+                        <div class="category-content-box">
+                            <div class="category-content-flex">
+                                <h3 class="category-item-title">HAT & CAPS</h3>
+
+                                <p class="category-item-amount">(39)</p>
+                            </div>
+                            <a href="#" class="category-btn">Show all</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
 
@@ -772,4 +908,4 @@
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body> 
-</html>
+</html> 
