--- a/index.html
+++ b/index.html
@@ -2961,7 +2961,123 @@
 
 
     </main>
+    <!--============ Footer ==========-->
 
+    <footer>
+        
+        <div class="footer-category">
+            <div class="container">
+
+                <h2 class="footer-category-title">Brand directory</h2>
+
+                <div class="footer-category-box">
+
+                    <h3 class="category-box-title">Fasgion :</h3>
+
+                    <a href="#" class="footer-category-link">T-shirt</a>
+                    <a href="#" class="footer-category-link">Shirts</a>
+                    <a href="#" class="footer-category-link">shorts & jeans</a>
+                    <a href="#" class="footer-category-link">jacket</a>
+                    <a href="#" class="footer-category-link">dress & frock</a>
+                    <a href="#" class="footer-category-link">innerwear</a>
+                    <a href="#" class="footer-category-link">hosiery</a>
+
+                </div>
+
+                <div class="footer-category-box">
+
+                    <h3 class="category-box-title">footwear :</h3>
+
+                    <a href="#" class="footer-category-link">sportt</a>
+                    <a href="#" class="footer-category-link">formal</a>
+                    <a href="#" class="footer-category-link">boots</a>
+                    <a href="#" class="footer-category-link">casual</a>
+                    <a href="#" class="footer-category-link">cowboy shoes</a>
+                    <a href="#" class="footer-category-link">safety shoes</a>
+                    <a href="#" class="footer-category-link">party wear shoes</a>
+                    <a href="#" class="footer-category-link">branded</a>
+                    <a href="#" class="footer-category-link">firstcopy</a>
+                    <a href="#" class="footer-category-link">long shoes</a>
+
+                </div>
+
+                <div class="footer-category-box">
+
+                    <h3 class="category-box-title">jewellery :</h3>
+
+                    <a href="#" class="footer-category-link">Necklace</a>
+                    <a href="#" class="footer-category-link">earrings</a>
+                    <a href="#" class="footer-category-link">couple rings</a>
+                    <a href="#" class="footer-category-link">pendants</a>
+                    <a href="#" class="footer-category-link">crystal</a>
+                    <a href="#" class="footer-category-link">bangles</a>
+                    <a href="#" class="footer-category-link">bracelets</a>
+                    <a href="#" class="footer-category-link">nosepin</a>
+                    <a href="#" class="footer-category-link">chain</a>
+                    <a href="#" class="footer-category-link">earrings</a>
+                    <a href="#" class="footer-category-link">couple rings</a>
+
+
+                </div>
+
+                <div class="footer-category-box">
+
+                    <h3 class="category-box-title">cosmetics :</h3>
+
+                    <a href="#" class="footer-category-link">shampoo</a>
+                    <a href="#" class="footer-category-link">bodywash</a>
+                    <a href="#" class="footer-category-link">facewash</a>
+                    <a href="#" class="footer-category-link">makeup kit</a>
+                    <a href="#" class="footer-category-link">liner</a>
+                    <a href="#" class="footer-category-link">lipstick</a>
+                    <a href="#" class="footer-category-link">prefume</a>
+                    <a href="#" class="footer-category-link">body soap</a>
+                    <a href="#" class="footer-category-link">scrub</a>
+                    <a href="#" class="footer-category-link">hair gel</a>
+                    <a href="#" class="footer-category-link">hair colors</a>
+                    <a href="#" class="footer-category-link">haier dye</a>
+                    <a href="#" class="footer-category-link">sunscreen</a>
+                    <a href="#" class="footer-category-link">skin loson</a>
+                    <a href="#" class="footer-category-link">liner</a>
+                    <a href="#" class="footer-category-link">;ipstick</a>
+                </div>
+
+
+            </div>
+        </div>
+
+        <div class="footer-nav">
+            <div class="container">
+
+                <ul class="footer-nav-list">
+
+                    <li class="footer-item">
+                        <h2 class="nav-title">Popular Categories</h2>
+                    </li>
+
+                    <li class="footer-nav-item">
+                        <a href="#" class="footer-nav-link">Fashion</a>
+                    </li>
+
+                    <li class="footer-nav-item">
+                        <a href="#" class="footer-nav-link">Electronic</a>
+                    </li>
+
+                    <li class="footer-nav-item">
+                        <a href="#" class="footer-nav-link">Cosmetic</a>
+                    </li>
+
+                    <li class="footer-nav-item">
+                        <a href="#" class="footer-nav-link">Heatlth</a>
+                    </li>
+
+                    <li class="footer-nav-item">
+                        <a href="#" class="footer-nav-link">Watches</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 <!-- JS Link -->
 <script src="assets/js/script.js"></script>
