--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="overlay" data-overlay></div>
 
     <!--========= Modal ===========-->
-    <div class="modal closed " data-modal>
+    <div class="modal  " data-modal>
         <div class="modal-close-overlay" data-modal-overlay></div>
 
         <div class="modal-content">
@@ -51,7 +51,7 @@
         </div>
     </div>
     <!--========= Notification Toast ============-->
-    <div class="notification-toast closed" data-toast>
+    <div class="notification-toast" data-toast>
 
         <button class="toast-close-btn" data-toast-close>
             <ion-icon name="close-outline"></ion-icon>
@@ -170,7 +170,7 @@
         </div>
 
         <nav class="desktop-navigation-menu">
-            <div class="container">
+            <div class="conatiner">
 
                 <ul class="desktop-menu-category-list">
 
@@ -900,7 +900,7 @@
         </div>
         <!--========= Product =========-->
         <div class="product-container">
-            <div class="conatiner">
+            <div class="container">
                 <!-- Sidebar -->
                 <div class="sidebar has-scrollbar" data-mobile-menu>
                     <div class="slidebar-category">
@@ -3039,7 +3039,7 @@
                     <a href="#" class="footer-category-link">sunscreen</a>
                     <a href="#" class="footer-category-link">skin loson</a>
                     <a href="#" class="footer-category-link">liner</a>
-                    <a href="#" class="footer-category-link">;ipstick</a>
+                    <a href="#" class="footer-category-link">ipstick</a>
                 </div>
 
 
